|ssue #GRUND-334: Fixed z-index of map elements

--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -21,7 +21,7 @@ $breakpoint-threshold:        60px;
 /* Z-index (inspired by https://www.smashingmagazine.com/2014/06/sassy-z-index-management-for-complex-layouts/)
    ================================================================================================================== */
 
-$z-index-elements: map, header-overlay, header, content, nav, logo, overlay, hamburger-menu, nav-toggle;
+$z-index-elements: map, map-legend, map-popup, header-overlay, header, content, nav, logo, overlay, hamburger-menu, nav-toggle;
 
 
 /* Layout
